More CSS, including fixing index page spacing with ellipsis option

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,9 +4,14 @@ body {
   background-color: #efefef;
 }
 
+*{
+  font-family: "Actor";
+}
+
  h1, .list-number {
    font-family:'Alfa Slab One';
    color:#2B2B2B;
+   font-size: .75em;
  }
 
   h1{
@@ -22,6 +27,26 @@ body {
 
 .all-page-header a{
   color: #efefef;
+  font-family:'Alfa Slab One';
+}
+
+#index{
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
+#index p{
+  font-size: 2em;
+}
+
+#index-votes h3{
+  padding-left: 13%;
+}
+
+#index-votes h2{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .show-one, .form-new, .full-list {
@@ -29,7 +54,7 @@ padding: 5%;
 }
 
 h2 a, h3 {
-  font-family: Ek Mukta;
+  font-family: Actor;
   color:#2B2B2B;
 }
 
@@ -52,7 +77,7 @@ p a:hover {
 footer p{
   border-top: solid 5px #dd1b1b;
   clear: both;
-  font-family: Ek Mukta;
+  font-family: Actor;
   text-align: center;
   padding-top: 3%;
   padding-bottom: 3%;
@@ -64,8 +89,12 @@ div .buttons *, .voting *{
   display:inline;
 }
 
-#spacer {
-  color: #efefef;
+.voting p {
+  font-size: 1.5em;
+}
+
+.show-one p {
+  font-size: 1.5em;
 }
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
